# rust-os

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  clean.sh  compile.sh  mkiso.sh  runiso.sh
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  long_mode_start.asm
